metadata/force-app/main/default/objects/CustomName_cvwkY__c/CustomName_cvwkY__c.object-meta.xml
<CustomObject>
    <description>Description_fchBD</description>
    <label>CustomLabel_GpEre</label>
    <nameField>
        <label>CustomLabel_GpEre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_GpEres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>