metadata/force-app/main/default/objects/CustomName_cvwkY__c/fields/CustomField_xwVmy__c.field-meta.xml
<CustomField>
    <fullName>CustomField_xwVmy__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldwjlnK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>